# KongFuOfArchitect

./: .gitignore  CNAME  README-en.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  effective.md  guide.md  high_quality_code.md  index.html  self_charge.md  test.txt  thought.md
.github/workflows/: apisec-scan.yml  brakeman.yml  checkmarx.yml  clj-watson.yml  cloudrail.yml  codacy.yml  codeql-analysis.yml  codeql.yml  codescan.yml  contrast-scan.yml  detekt.yml  devskim.yml  eslint.yml  pmd.yml  (+32 more)
docs/: README.md  _coverpage.md  index.html
en/: change_log.md  framework.md  major.md  path.md  sequence.md
part1/: README.md
part10/: README.md
part11/: README.md
part13/: README.md
part14/: README.md
part2/: README.md
part3/: README.md
part3/c++_stl/: .gitignore  CMakeLists.txt  README.md  replace.js
part3/c++_stl/advance/: CMakeLists.txt  cgi_env.cpp  cgi_lib_a.cpp  cpp_dynamic_memory.cpp  cpp_dynamic_memory_a.cpp  cpp_exceptions_handling_a.cpp  cpp_exceptions_handling_b.cpp  cpp_files_streams.cpp  cpp_multithreading_a.cpp  cpp_multithreading_b.cpp  cpp_multithreading_c.cpp  cpp_namespace_c.cpp  cpp_namespace_d.cpp  cpp_namespaces_a.cpp  cpp_namespaces_b.cpp  cpp_preprocessor_a.cpp  cpp_preprocessor_b.cpp  cpp_preprocessor_c.cpp  cpp_signal_handling_a.cpp  cpp_signal_handling_b.cpp  cpp_templates_a.cpp  cpp_templates_b.cpp  read.cpp  server.cpp
part3/c++_stl/c++_basic/: CMakeLists.txt  access_struct_member.cpp  accessing_array.cpp  array_of_pointer_a.cpp  array_of_pointer_b.cpp  array_of_pointer_c.cpp  break_statement.cpp  call_function.cpp  continue_statement.cpp  cpp_references.cpp  cpp_string_a.cpp  cpp_string_b.cpp  current_date_time.cpp  data_type.cpp  define_constants.cpp  define_numbers.cpp  do_while_loop.cpp  enum_type.cpp  escape_sequence.cpp  extern_file1.cpp  extern_support.cpp  for_loop.cpp  format_time_with_struct_tm.cpp  func_declaration.cpp  func_default_value.cpp  function_example.cpp  function_param_default_value.cpp  global_variable.cpp  goto_statement.cpp  hello.cpp  if_else_if_else_statement.cpp  if_else_statement.cpp  if_statement.cpp  increment_pointer.cpp  infinite_loop.cpp  int_literal.cpp  local_variable.cpp  math_operation.cpp  modifier_types.cpp  multi_dimensional_arrays.cpp  (+42 more)
part3/c++_stl/c++_standard_library/: CMakeLists.txt  aaaa.cpp  bad_array_new_length.cpp  cpp_allocate_shared.cpp  cpp_const_pointer_cast.cpp  cpp_dynamic_pointer_cast.cpp  cpp_enable_shared_from_this.cpp  cpp_get_deleter.cpp  cpp_make_shared.cpp  cpp_new_bad_alloc.cpp  cpp_new_nothrow.cpp  cpp_new_operator_new.cpp  cpp_new_operator_new_operator.cpp  cpp_new_operator_operator_delete_operator.cpp  cpp_owner_less.cpp  functional.cpp  static_pointer_cast.cpp
part3/c++_stl/c_standard_library/: CMakeLists.txt  c_ctype_h.cpp  c_function_acos.cpp  c_function_asin.cpp  c_function_atan.cpp  c_function_atan2.cpp  c_function_atof.cpp  c_function_atoi.cpp  c_function_ceil.cpp  c_function_cos.cpp  c_function_cosh.cpp  c_function_exp.cpp  c_function_fabs.cpp  c_function_floor.cpp  c_function_fmod.cpp  c_function_frexp.cpp  c_function_iscntrl.cpp  c_function_isdigit.cpp  c_function_isgraph.cpp  c_function_islower.cpp  c_function_isprint.cpp  c_function_ispunct.cpp  c_function_isspace.cpp  c_function_isupper.cpp  c_function_isxdigit.cpp  c_function_ldexp.cpp  c_function_log.cpp  c_function_log10.cpp  c_function_modf.cpp  c_function_pow.cpp  c_function_raise.cpp  c_function_signal.cpp  c_function_sin.cpp  c_function_sinh.cpp  c_function_sqrt.cpp  c_function_tanh.cpp  c_function_tolower.cpp  c_function_toupper.cpp  c_macro_assert.cpp  c_macro_edom.cpp  (+11 more)
part3/c++_stl/oop/: CMakeLists.txt  assignment_operators_overloading.cpp  binary_operators_overloading.cpp  box.cpp  class_member_access_operator_overloading.cpp  class_static_function_member.cpp  class_static_keyword.cpp  class_static_memeber.cpp  class_this_pointer.cpp  constructor_concept.cpp  copy_constructor.cpp  cpp_class_member_functions.cpp  cpp_data_abstraction.cpp  cpp_data_encapsulation.cpp  cpp_inheritance.cpp  cpp_interfaces.cpp  cpp_polymorphism_a.cpp  cpp_polymorphism_b.cpp  destructor_concept.cpp  friend_function_class.cpp  function_call_operator_overloading.cpp  increment_decrement_operators_overloading.cpp  inline_function_class.cpp  input_output_operators_overloading.cpp  multiple_inheritance.cpp  overloading_function.cpp  overloading_operator.cpp  parameterized_constructor.cpp  pointer_to_classes.cpp  private_ember.cpp  private_member.cpp  protect_member.cpp  public_member.cpp  relational_operators_overloading.cpp  subscripting_operator_overloading.cpp  unary_operators_overloading.cpp
part3/c++_stl/sockets/: CMakeLists.txt  README.md  a.cpp  a.h  b.cpp  b.h
part3/c++_stl/standard_template_library/: CMakeLists.txt  cpp_array_ataaa.cpp  cpp_array_back.cpp  cpp_array_begin.cpp  cpp_array_cbegin.cpp  cpp_array_cend.cpp  cpp_array_crbegin.cpp  cpp_array_data.cpp  cpp_array_empty.cpp  cpp_array_swap.cpp  cpp_deque_assign_range.cpp
part3/functionalProgramming/: CMakeLists.txt  Lambda.md  README.md  add_num.cpp  call_by_ref.cpp  call_by_ref.py  call_by_val.py  call_by_value.cpp  create_record.cpp  determining_file_size.cpp  func_with_arg_no_return.cpp  func_with_arg_no_return.py  func_with_arg_return_val.cpp  func_with_arg_return_val.py  function_overloading.cpp  function_overriding.cpp  function_overriding.py  high_order_function.php  high_order_function.py  io_operation.md  lazy_evaluation.md  lazy_evaluation.py  polymorphism.cpp  read_from_file.cpp  recursion.cpp  recursion.py  remove_file_.cpp  str_len.cpp  user_defined.cpp  write_to_file.cpp  write_to_file.erl
part3/functionalProgramming/er_functional/: readme.md
part3/functionalProgramming/er_functional/src/: atomic_string.erl  bit_string_type.erl  bool_type.erl  data_type_number.erl  list_type.erl  map_type.erl  numberType.erl  record_type.erl  tuple_type.erl
part4/: ComputerFactory.java  FoodFactoryV2.java  FootdFactory.java  README.md  Singleton3.java  UserBuilder.java
part5/: README.md
part7/: README.md
part8/: README.md
part9/: README.md
(+2627 files in other folders)
