add_executable(data_type data_type.cpp )
add_executable(type_def type_def.cpp)
add_executable(enum_type enum_type.cpp)
add_executable(variable_define variable_define.cpp)
add_executable(variable_declaration variable_declaration.cpp)
add_executable(hello hello.cpp)
add_executable(func_declaration func_declaration.cpp)
add_executable(local_variable local_variable.cpp)
add_executable(global_variable global_variable.cpp)
add_executable(preferential_variable preferential_variable.cpp)
add_executable(int_literal int_literal.cpp)
add_executable(escape_sequence escape_sequence.cpp)
add_executable(string_literal string_literal.cpp)
add_executable(define_constants define_constants.cpp)
add_executable(modifier_types modifier_types.cpp)
add_executable(static_modifier static_modifier.cpp)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_library(c++_basic data_type.cpp type_def.cpp enum_type.cpp variable_define.cpp variable_declaration.cpp func_declaration.cpp local_variable.cpp global_variable.cpp preferential_variable.cpp int_literal.cpp escape_sequence.cpp string_literal.cpp define_constants.cpp modifier_types.cpp static_modifier.cpp)
install(TARGETS c++_basic DESTINATION bin)
install(FILES data_type.cpp type_def.cpp DESTINATION include)