add_executable(data_type data_type.cpp )
add_executable(type_def type_def.cpp)
add_executable(enum_type enum_type.cpp)
add_executable(variable_define variable_define.cpp)
add_executable(variable_declaration variable_declaration.cpp)
add_executable(hello hello.cpp)
add_executable(func_declaration func_declaration.cpp)
add_executable(local_variable local_variable.cpp)
add_executable(global_variable global_variable.cpp)
add_executable(preferential_variable preferential_variable.cpp)
add_executable(int_literal int_literal.cpp)
add_executable(escape_sequence escape_sequence.cpp)
add_executable(string_literal string_literal.cpp)
add_executable(define_constants define_constants.cpp)
add_executable(modifier_types modifier_types.cpp)
add_executable(static_modifier static_modifier.cpp)
add_executable(extern_file1 extern_file1.cpp)
add_executable(while_loop while_loop.cpp)
add_executable(for_loop for_loop.cpp)
add_executable(do_while_loop do_while_loop.cpp)
add_executable(nested_loop nested_loop.cpp)
add_executable(break_statement break_statement.cpp)
add_executable(continue_statement continue_statement.cpp)
add_executable(goto_statement goto_statement.cpp)
add_executable(switch_statement switch_statement.cpp)
add_executable(function_example function_example.cpp)
add_executable(call_function call_function.cpp)
add_executable(swap_main swap.cpp swap_main.cpp)
add_executable(swap_pointer_main swap_pointer_main.cpp swap_pointer.cpp)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_library(c++_basic data_type.cpp type_def.cpp enum_type.cpp variable_define.cpp variable_declaration.cpp func_declaration.cpp local_variable.cpp global_variable.cpp preferential_variable.cpp int_literal.cpp escape_sequence.cpp string_literal.cpp define_constants.cpp modifier_types.cpp static_modifier.cpp extern_file1.cpp extern_support.cpp mutable.cpp mutable.h while_loop.cpp for_loop.cpp do_while_loop.cpp nested_loop.cpp break_statement.cpp continue_statement.cpp goto_statement.cpp infinite_loop.cpp if_statement.cpp if_else_statement.cpp if_else_if_else_statement.cpp switch_statement.cpp nested_statement.cpp three_operands_statement.cpp function_example.cpp call_function.cpp swap.cpp swap_main.cpp swap_pointer_main.cpp swap_pointer.cpp)
install(TARGETS c++_basic DESTINATION bin)
install(FILES data_type.cpp type_def.cpp extern_file1.cpp extern_support.cpp DESTINATION include)
