add_executable(c_macro_assert c_macro_assert.cpp)
add_executable(c_ctype_h c_ctype_h.cpp)
add_executable(c_function_iscntrl c_function_iscntrl.cpp)
add_executable(c_function_isdigit c_function_isdigit.cpp)
add_executable(c_function_isgraph c_function_isgraph.cpp)
add_executable(c_function_islower c_function_islower.cpp)
add_executable(c_function_isprint c_function_isprint.cpp)
add_executable(c_function_ispunct c_function_ispunct.cpp)
add_executable(c_function_isspace c_function_isspace.cpp)
add_executable(c_function_isupper c_function_isupper.cpp)
add_executable(c_function_isxdigit c_function_isxdigit.cpp)
add_executable(c_function_tolower c_function_tolower.cpp)
add_executable(c_function_toupper c_function_toupper.cpp)
add_executable(c_macro_errno c_macro_errno.cpp)
add_executable(c_macro_edom c_macro_edom.cpp)
add_executable(c_macro_erange c_macro_erange.cpp)
add_executable(float_h float_h.cpp)
add_executable(limits_h limits_h.cpp)
add_executable(c_function_acos c_function_acos.cpp)
add_executable(c_function_atan2 c_function_atan2.cpp)
add_executable(c_function_cosh c_function_cosh.cpp)
add_library(c_standard_library c_function_iscntrl.cpp c_function_isxdigit.cpp c_macro_assert.cpp c_ctype_h.cpp c_function_isdigit.cpp c_function_isgraph.cpp c_function_islower.cpp c_function_isprint.cpp c_function_ispunct.cpp c_function_isspace.cpp c_function_isupper.cpp c_function_tolower.cpp c_function_toupper.cpp c_macro_errno.cpp c_macro_edom.cpp c_macro_erange.cpp float_h.cpp limits_h.cpp c_function_acos.cpp c_function_asin.cpp c_function_atan.cpp c_function_atan2.cpp c_function_cos.cpp c_function_cosh.cpp)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
install(TARGETS c_standard_library DESTINATION bin)
install(FILES c_function_iscntrl.cpp c_function_isxdigit.cpp c_macro_assert.cpp DESTINATION include)
