add_executable(box box.cpp )
add_executable(cpp_class_member_functions cpp_class_member_functions.cpp)
add_executable(publicMember public_member.cpp)
add_executable(private_member private_member.cpp)
add_executable(protect_member protect_member.cpp)
add_executable(constructor_concept constructor_concept.cpp)
add_executable(destructor_concept destructor_concept.cpp)
add_executable(copy_constructor copy_constructor.cpp)
add_library(oop box.cpp cpp_class_member_functions.cpp public_member.cpp private_ember.cpp private_member.cpp protect_member.cpp constructor_concept.cpp parameterized_constructor.cpp destructor_concept.cpp copy_constructor.cpp)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
install(TARGETS oop DESTINATION bin)
install(FILES box.cpp cpp_class_member_functions.cpp public_member.cpp DESTINATION include)