add_executable(box box.cpp )
add_executable(cpp_class_member_functions cpp_class_member_functions.cpp)
add_executable(publicMember public_member.cpp)
add_executable(private_member private_member.cpp)
add_executable(protect_member protect_member.cpp)
add_executable(constructor_concept constructor_concept.cpp)
add_executable(destructor_concept destructor_concept.cpp)
add_executable(copy_constructor copy_constructor.cpp)
add_executable(friend_function_class friend_function_class.cpp)
add_executable(inline_function_class inline_function_class.cpp)
add_executable(class_this_pointer class_this_pointer.cpp)
add_executable(class_static_keyword class_static_keyword.cpp)
add_executable(class_static_function_member class_static_function_member.cpp)
add_executable(pointer_to_classes pointer_to_classes.cpp)
add_executable(cpp_inheritance cpp_inheritance.cpp)
add_executable(multiple_inheritance multiple_inheritance.cpp)
add_executable(overloading_function overloading_function.cpp)
add_executable(overloading_operator overloading_operator.cpp)
add_executable(unary_operators_overloading unary_operators_overloading.cpp)
add_executable(binary_operators_overloading binary_operators_overloading.cpp)
add_executable(relational_operators_overloading relational_operators_overloading.cpp)
add_executable(input_output_operators_overloading input_output_operators_overloading.cpp)
add_executable(assignment_operators_overloading assignment_operators_overloading.cpp)
add_executable(increment_decrement_operators_overloading increment_decrement_operators_overloading.cpp)
add_executable(function_call_operator_overloading function_call_operator_overloading.cpp)
add_executable(subscripting_operator_overloading subscripting_operator_overloading.cpp)
add_executable(class_member_access_operator_overloading class_member_access_operator_overloading.cpp)
add_executable(cpp_polymorphism_a cpp_polymorphism_a.cpp)
add_executable(cpp_polymorphism_b cpp_polymorphism_b.cpp)
add_executable(cpp_data_abstraction cpp_data_abstraction.cpp)
add_executable(cpp_data_encapsulation cpp_data_encapsulation.cpp)
add_executable(cpp_interfaces cpp_interfaces.cpp)
add_library(oop box.cpp cpp_class_member_functions.cpp public_member.cpp private_ember.cpp private_member.cpp protect_member.cpp constructor_concept.cpp parameterized_constructor.cpp destructor_concept.cpp copy_constructor.cpp friend_function_class.cpp inline_function_class.cpp class_this_pointer.cpp class_static_memeber.cpp class_static_keyword.cpp class_static_function_member.cpp pointer_to_classes.cpp cpp_inheritance.cpp multiple_inheritance.cpp overloading_function.cpp overloading_operator.cpp unary_operators_overloading.cpp binary_operators_overloading.cpp relational_operators_overloading.cpp input_output_operators_overloading.cpp increment_decrement_operators_overloading.cpp assignment_operators_overloading.cpp function_call_operator_overloading.cpp subscripting_operator_overloading.cpp class_member_access_operator_overloading.cpp cpp_polymorphism_a.cpp cpp_data_abstraction.cpp cpp_data_encapsulation.cpp cpp_interfaces.cpp)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
install(TARGETS oop DESTINATION bin)
install(FILES box.cpp cpp_class_member_functions.cpp public_member.cpp DESTINATION include)
