include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_library(standard_template_library cpp_array_ataaa.cpp cpp_array_back.cpp sadasd.cpp cpp_array_begin.cpp cpp_array_cbegin.cpp cpp_array_cend.cpp cpp_array_crbegin.cpp cpp_array_data.cpp cpp_array_empty.cpp cpp_array_swap.cpp cpp_deque_assign_range.cpp)
install(TARGETS standard_template_library DESTINATION bin)
install(FILES cpp_array_ataaa.cpp cpp_array_back.cpp DESTINATION include)
add_executable(cpp_array_ataaa cpp_array_ataaa.cpp)
add_executable(cpp_array_back cpp_array_back.cpp)
add_executable(cpp_array_crbegin cpp_array_crbegin.cpp)
add_executable(cpp_array_data cpp_array_data.cpp)
add_executable(cpp_array_swap cpp_array_swap.cpp)
add_executable(cpp_deque_assign_range cpp_deque_assign_range.cpp)